--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>striderpc-client-connect</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+import Hero from "@/components/Hero";
+import Services from "@/components/Services";
+import FeaturedBuilds from "@/components/FeaturedBuilds";
+import About from "@/components/About";
+import Contact from "@/components/Contact";
+import Footer from "@/components/Footer";
 
-    <meta property="og:title" content="striderpc-client-connect" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+const Index = () => {
+  return (
+    <div className="min-h-screen">
+      <Hero />
+      <Services />
+      <FeaturedBuilds />
+      <About />
+      <Contact />
+      <Footer />
+    </div>
+  );
+};
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
-
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
+export default Index;
